<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tool="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tool:context=".TambahBuku">

    <EditText
        android:id="@+id/nambuk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/nabok"
        android:inputType="textPersonName"
        tools:layout_constraintBottom_toTopOf="@+id/ekob"
        tools:layout_constraintEnd_toEndOf="parent"
        tools:layout_constraintHorizontal_bias="0.502"
        tools:layout_constraintStart_toStartOf="parent"
        tools:layout_constraintTop_toBottomOf="@+id/textView"
        tools:layout_constraintVertical_bias="0.255" />

    <EditText
        android:id="@+id/ekob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="200dp"
        android:ems="10"
        android:hint="@string/kobok"
        android:inputType="textPersonName"
        tools:layout_constraintBottom_toTopOf="@+id/buttonOk"
        tools:layout_constraintEnd_toEndOf="parent"
        tools:layout_constraintStart_toStartOf="parent"
        tools:layout_constraintTop_toBottomOf="@+id/Gbuk"
        tools:layout_constraintVertical_bias="0.89" />

    <EditText
        android:id="@+id/Tabuk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/tbuk"
        tools:layout_constraintBottom_toBottomOf="@id/Gbuk"
        android:inputType="textPersonName"
        tools:layout_constraintBottom_toTopOf="@+id/Gbuk"
        tools:layout_constraintEnd_toEndOf="parent"
        tools:layout_constraintStart_toStartOf="parent"
        tools:layout_constraintTop_toBottomOf="@+id/nambuk"
        tools:layout_constraintVertical_bias="0.089" />

    <EditText
        android:id="@+id/Gbuk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/genbok"
        tools:layout_constraintBottom_toBottomOf="@id/ekob"
        android:inputType="textPersonName"
        tools:layout_constraintBottom_toTopOf="@+id/ekob"
        tools:layout_constraintEnd_toEndOf="parent"
        tools:layout_constraintStart_toStartOf="parent"
        tools:layout_constraintTop_toBottomOf="@+id/Tabuk"
        tools:layout_constraintVertical_bias="0.089" />

    <Button
        android:id="@+id/buttonOk"
        android:layout_width="125dp"
        android:layout_height="72dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="100dp"
        android:hint="@string/btnOk"
        tools:layout_constraintBottom_toBottomOf="parent"
        tools:layout_constraintEnd_toEndOf="parent"
        tools:layout_constraintStart_toStartOf="parent"
        tools:layout_constraintTop_toBottomOf="@+id/ekob"
        tools:layout_constraintVertical_bias="0.557" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        tools:layout_constraintBottom_toTopOf="@+id/ekob"
        tools:layout_constraintEnd_toEndOf="parent"
        tools:layout_constraintStart_toStartOf="parent"
        tools:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>