<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_lihat_data"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/detail_buku"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Data Buku"
        android:textSize="14pt"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.096" />

    <TextView
        android:id="@+id/Judul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="Judul Buku"
        android:textSize="11pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.112"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_buku"
        app:layout_constraintVertical_bias="0.031" />

    <TextView
        android:id="@+id/tvJudulBuku"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nabok"
        android:textSize="11pt"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.232"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Judul"
        app:layout_constraintVertical_bias="0.033" />

    <TextView
        android:id="@+id/NamaAu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Nama Author"
        android:textSize="11pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.105"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvJudulBuku"
        app:layout_constraintVertical_bias="0.044" />

    <TextView
        android:id="@+id/tvNamthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tbuk"
        android:textSize="11pt"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NamaAu"
        app:layout_constraintVertical_bias="0.04" />

    <TextView
        android:id="@+id/GenreBu"
        android:layout_width="148dp"
        android:layout_height="33dp"
        android:layout_marginTop="24dp"
        android:text="Genre Buku"
        android:textSize="11pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.102"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNamthor"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvgbuuk"
        android:layout_width="144dp"
        android:layout_height="35dp"
        android:layout_marginTop="8dp"
        android:text="@string/genrebook"
        android:textSize="11pt"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.243"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/GenreBu"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/KodeBu"
        android:layout_width="133dp"
        android:layout_height="34dp"
        android:layout_marginTop="20dp"
        android:text="Kode Buku"
        android:textSize="11pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.097"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvgbuuk"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvKobuk"
        android:layout_width="141dp"
        android:layout_height="36dp"
        android:layout_marginTop="25dp"
        android:text="@string/kobok"
        android:textSize="11pt"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.27"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/KodeBu"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>