<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <FrameLayout
        android:id="@+id/flMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <RelativeLayout
            android:id="@+id/rlAppName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="15dp"
                android:text="@string/rentB"
                android:textColor="@color/pink"
                android:textSize="20sp" />

        </RelativeLayout>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center"
            android:layout_marginEnd="-20dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imgDate"
                    android:layout_width="115dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="5dp" />

                <TextView
                    android:id="@+id/tvDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="25dp"
                    android:layout_toEndOf="@id/imgDate"
                    android:text="@string/idkecil"
                    android:textColor="@color/pink"
                    android:textSize="12sp" />

            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_gravity="center"
            android:layout_marginTop="56dp"
            android:src="@drawable/reading"
            app:srcCompat="@drawable/reading" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:layout_marginBottom="28dp"
            android:gravity="center"
            android:text="@string/judul1"
            android:textColor="@color/greensoft"
            android:textSize="22sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_info_buku"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginBottom="20dp"

            android:text="INFORMASI BUKU"
            android:textColor="@color/pink"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_sewa"
            android:layout_width="match_parent"
            android:layout_height="64dp"

            android:text="SEWA BUKU"
            android:textColor="@color/pink"
            android:textSize="18sp" />

    </LinearLayout>

</RelativeLayout>