<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/sewabook"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/pink"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sewabook"
        android:clipToPadding="false"
        android:fillViewport="false"
        android:paddingBottom="20dp"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="3dp"
                app:strokeColor="@color/white"
                app:strokeWidth="2dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp">

                    <TextView
                        android:id="@+id/idSewa"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="Identitas Penyewa"
                        android:textColor="@color/pink"
                        android:textSize="19sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/idSewa"
                        android:layout_marginTop="20dp"
                        android:text="@string/nama"
                        android:textColor="@android:color/black"
                        android:textSize="17sp" />

                    <EditText
                        android:id="@+id/eTNama"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/txtName"
                        android:hint="Masukkan Nama (Max 15 karakter)"
                        android:inputType="text"
                        android:maxLength="20"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/txtAlamat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/eTNama"
                        android:layout_marginTop="10dp"
                        android:text="@string/alamat"
                        android:textColor="@android:color/black"
                        android:textSize="17sp" />

                    <EditText
                        android:id="@+id/eTAlamat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/txtAlamat"
                        android:hint="Masukkan Alamat Anda"
                        android:inputType="text"
                        android:maxLength="20"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/txtTlp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/eTAlamat"
                        android:layout_marginTop="10dp"
                        android:text="@string/nohp"
                        android:textColor="@android:color/black"
                        android:textSize="17sp" />

                    <EditText
                        android:id="@+id/eTHP"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/txtTlp"
                        android:hint="Masukkan No. Telp/HP"
                        android:inputType="number"
                        android:maxLength="20"
                        android:textSize="16sp" />

                </RelativeLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="3dp"
                app:strokeColor="@color/white"
                app:strokeWidth="2dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp">

                    <TextView
                        android:id="@+id/idDataBuku"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="Data Buku"
                        android:textColor="@color/pink"
                        android:textSize="19sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtGenre"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/idDataBuku"
                        android:layout_marginTop="20dp"
                        android:text="Judul Buku"
                        android:textColor="@android:color/black"
                        android:textSize="17sp" />

                    <EditText
                        android:id="@+id/eTgenre"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/txtGenre"
                        android:hint="Judul"
                        android:inputType="text"
                        android:maxLength="10"
                        android:textSize="16sp" />
                </RelativeLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/selesaiHitung"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:layout_margin="8dp"
                android:text="Selesai"
                app:cornerRadius="50dp"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:theme="@style/Theme.MaterialComponents.Light"
                app:backgroundTint="@color/salem" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>